new autovect branch.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -177,9 +177,12 @@ particular releases or snapshots or the latest snapshot.  </p>
   Caroline Tice, Dale Johannesen, Kenneth Zadeck, Stuart Hastings,
   Mostafa Hagog.</dd>
 
-  <dt><a href="projects/tree-ssa/lno.html">lno-branch</a></dt>
-  <dd>This branch aims at implementing a loop nest optimizer at the
-  tree level.</dd>
+  <dt>autovect-branch</dt>
+  <dd>This branch is the successor to the lno-branch.  The purpose of this
+  branch is tree-level <a href="projects/tree-ssa/vectorization.html">
+  autovectorization</a> work, and related work that the autovectorizer
+  could use or benefit from (like data-dependence analysis,
+  <a href="projects/tree-ssa/lno.html">loop nest optimizations</a>).</dd>
 
   <dt><a href="projects/strees/index.html">stree-branch</a></dt>
   <dd>This branch is for improving compilation speed and reducing memory
@@ -437,6 +440,12 @@ be prefixed with the initials of the distributing organization.</p>
   support in GCC.  It has since been found that a new C parser is
   necessary before OpenMP support can be easily implemented.  Thus,
   the branch is currently unmaintained.</dd>
+
+  <dt><a href="projects/tree-ssa/lno.html">lno-branch</a></dt>
+  <dd>A sub-branch of tree-ssa that aims at implementing a loop
+  nest optimizer at the tree level.  Was largely merged into mainline,
+  and is currently unmaintained.
+  This work now continues on the autovect-branch.</dd>
 
 </dl>
 
