* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -4,7 +4,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-Tue Nov  9 15:04:04 UTC 2004</p>
+Sat Nov 13 18:24:12 UTC 2004</p>
 <p>Only lists non-gui files (NO AWT, Swing, or gtk-peer)</p>
 <p>This table intentionally omits certain classes which are not of
 interest.  If the second column shows a "Diff" link, then that means
@@ -15,7 +15,6 @@ differences are currently required.</p>
 
 <table width="100%" border="1" cellspacing="0" cellpadding="1">
 <tr><th align="left">Class</th> <th>Merge Status</th> </tr>
-<tr> <td class="needsmerge">gnu.java.beans.IntrospectionIncubator</td> <td class="needsmerge"><a href="compare/gnu.java.beans.IntrospectionIncubator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.io.Base64InputStream</td> <td class="needsmerge"><a href="compare/gnu.java.io.Base64InputStream.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">gnu.java.io.EncodingManager</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.java.io.PlatformHelper</td> <td class="classpath-only">Classpath-only</td> </tr>
@@ -31,6 +30,7 @@ differences are currently required.</p>
 <tr> <td class="GCJ-specific">gnu.java.net.protocol.gcjlib.Connection</td> <td class="GCJ-specific">GCJ-specific</td> </tr>
 <tr> <td class="GCJ-specific">gnu.java.net.protocol.gcjlib.Handler</td> <td class="GCJ-specific">GCJ-specific</td> </tr>
 <tr> <td class="needsmerge">gnu.java.net.protocol.jar.Connection</td> <td class="needsmerge"><a href="compare/gnu.java.net.protocol.jar.Connection.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.nio.FileLockImpl</td> <td class="needsmerge"><a href="compare/gnu.java.nio.FileLockImpl.diff">Diff</a></td> </tr>
 <tr> <td class="VM-specific">gnu.java.nio.VMPipe</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="VM-specific">gnu.java.nio.VMSelector</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="needsmerge">gnu.java.nio.channels.FileChannelImpl</td> <td class="needsmerge"><a href="compare/gnu.java.nio.channels.FileChannelImpl.diff">Diff</a></td> </tr>
