--- a/htdocs/java/gui-compare/libgcj-classpath-compare.html
+++ b/htdocs/java/gui-compare/libgcj-classpath-compare.html
@@ -4,7 +4,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-Tue Nov  9 15:04:35 UTC 2004</p>
+Sat Nov 13 18:24:46 UTC 2004</p>
 <p>Only lists gui files (AWT, Swing, and gtk-peer)</p>
 <p>This table intentionally omits certain classes which are not of
 interest.  If the second column shows a "Diff" link, then that means
@@ -15,6 +15,9 @@ differences are currently required.</p>
 
 <table width="100%" border="1" cellspacing="0" cellpadding="1">
 <tr><th align="left">Class</th> <th>Merge Status</th> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GdkGraphics2D</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GdkGraphics2D.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkFramePeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkFramePeer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkToolkit</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkToolkit.diff">Diff</a></td> </tr>
 <tr> <td class="libgcj-only">gnu.java.awt.peer.gtk.Test</td> <td class="libgcj-only">GCJ-only</td> </tr>
 <tr> <td class="libgcj-only">gnu.java.awt.peer.gtk.TestAWT</td> <td class="libgcj-only">GCJ-only</td> </tr>
 <tr> <td class="needsmerge">java.awt.Button</td> <td class="needsmerge"><a href="compare/java.awt.Button.diff">Diff</a></td> </tr>
@@ -23,8 +26,33 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.awt.MenuItem</td> <td class="needsmerge"><a href="compare/java.awt.MenuItem.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.TextComponent</td> <td class="needsmerge"><a href="compare/java.awt.TextComponent.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.Window</td> <td class="needsmerge"><a href="compare/java.awt.Window.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.awt.geom.GeneralPath</td> <td class="needsmerge"><a href="compare/java.awt.geom.GeneralPath.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.PixelGrabber</td> <td class="needsmerge"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.image.Raster</td> <td class="needsmerge"><a href="compare/java.awt.image.Raster.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.print.PrinterJob</td> <td class="needsmerge"><a href="compare/java.awt.print.PrinterJob.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JComponent</td> <td class="needsmerge"><a href="compare/javax.swing.JComponent.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JDesktopPane</td> <td class="needsmerge"><a href="compare/javax.swing.JDesktopPane.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JMenuItem</td> <td class="needsmerge"><a href="compare/javax.swing.JMenuItem.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JTable</td> <td class="needsmerge"><a href="compare/javax.swing.JTable.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JTree</td> <td class="needsmerge"><a href="compare/javax.swing.JTree.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JViewport</td> <td class="needsmerge"><a href="compare/javax.swing.JViewport.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.RepaintManager</td> <td class="needsmerge"><a href="compare/javax.swing.RepaintManager.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.ScrollPaneLayout</td> <td class="needsmerge"><a href="compare/javax.swing.ScrollPaneLayout.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.ToolTipManager</td> <td class="needsmerge"><a href="compare/javax.swing.ToolTipManager.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.TransferHandler</td> <td class="needsmerge"><a href="compare/javax.swing.TransferHandler.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicLookAndFeel</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicLookAndFeel.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicMenuItemUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicMenuItemUI.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicTableHeaderUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicTableHeaderUI.diff">Diff</a></td> </tr>
+<tr> <td class="libgcj-only">javax.swing.plaf.basic.BasicTextPaneUI</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicTextUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicTextUI.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicTreeUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicTreeUI.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicViewportUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicViewportUI.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.text.GapContent</td> <td class="needsmerge"><a href="compare/javax.swing.text.GapContent.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.text.PlainDocument</td> <td class="needsmerge"><a href="compare/javax.swing.text.PlainDocument.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.text.SimpleAttributeSet</td> <td class="needsmerge"><a href="compare/javax.swing.text.SimpleAttributeSet.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.text.Utilities</td> <td class="needsmerge"><a href="compare/javax.swing.text.Utilities.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.tree.DefaultTreeCellRenderer</td> <td class="needsmerge"><a href="compare/javax.swing.tree.DefaultTreeCellRenderer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.tree.DefaultTreeModel</td> <td class="needsmerge"><a href="compare/javax.swing.tree.DefaultTreeModel.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GdkFontPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GdkFontPeer.c.diff">Diff</a></td> </tr>
 </table>
 </body>
 </html>
