Properly uppercase SPARC.

--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -169,7 +169,7 @@ changed to make them more clear.</p>
 <li><a href="http://gcc.gnu.org/PR9954">9954</a>: Cross-build for target i586-pc-linux-gnu (<code>--with-newlib</code>) failed</li>
 </ul>
 
-<h4>Sparc-specific:</h4>
+<h4>SPARC-specific:</h4>
 <ul>
 <li><a href="http://gcc.gnu.org/PR7784">7784</a>: [Sparc] ICE in extract_insn, in recog.c</li>
 <li><a href="http://gcc.gnu.org/PR7796">7796</a>: sparc extra failure with <code>-m64</code> on execute/930921-1.c in unroll.c</li>
