--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -1643,7 +1643,7 @@ are not listed here).</p>
 <ul>
 <li><a href="http://gcc.gnu.org/PR17853">17853</a> <code>-O2</code> ICE for MMX testcase</li>
 </ul>
-<h4>Sparc-specific</h4>
+<h4>SPARC-specific</h4>
 <ul>
 <li><a href="http://gcc.gnu.org/PR17245">17245</a> ICE compiling gsl-1.5 <code>statistics/lag1.c</code></li>
 </ul>
