--- a/htdocs/gcc-2.95/features.html
+++ b/htdocs/gcc-2.95/features.html
@@ -45,7 +45,7 @@
   </ul></li>
   <li>New Targets and Target Specific Improvements
   <ul>
-    <li><a href="../news/sparc.html">Sparc backend rewrite</a>.</li>
+    <li><a href="../news/sparc.html">SPARC backend rewrite</a>.</li>
     <li>-mschedule=8000 will optimize code for PA8000 class processors;
      -mpa-risc-2-0 will generate code for PA2.0 processors</li>
     <li>Various micro-optimizations for the ia32 port. K6 optimizations</li>
@@ -55,7 +55,7 @@
     <li>RS6000/PowerPC: -mcpu=401 was added as an alias for -mcpu=403.
         -mcpu=e603e was added to do -mcpu=603e and -msoft-float.</li>
     <li>c3x, c4x</li>
-    <li>HyperSparc</li>
+    <li>HyperSPARC</li>
     <li>SparcLite86x</li>
     <li>sh4</li>
     <li>Support for new systems (OpenBSD, FreeBSD, UWIN, Interix, arm-linux)</li>
@@ -178,7 +178,7 @@ enabled by default in future releases.  Use the option
 	<li>Fixed bug in the compiler which caused incorrect optimization
 	    of an obscure series of bit manipulations, shifts and arithmetic.</li>
 	<li>Fixed register allocator bug which caused teTeX to be mis-compiled
-	    on Sparc targets.</li>
+	    on SPARC targets.</li>
 	<li>Avoid incorrect optimization of degenerate case statements for
 	    certain targets such as the ARM.</li>
 	<li>Fix out of range memory reference in the jump optimizer.</li>
@@ -195,8 +195,8 @@ enabled by default in future releases.  Use the option
   <li>Platform specific bugfixes and improvements
     <ul>
 	<li>Work around bug in Sun V5.0 compilers which caused bootstrap
-	    comparison failures on Sparc targets.</li>
-	<li>Fix Sparc backend bug which caused aborts in final.c.</li>
+	    comparison failures on SPARC targets.</li>
+	<li>Fix SPARC backend bug which caused aborts in final.c.</li>
 	<li>Fix sparc-hal-solaris2* configuration fragments.</li>
 	<li>Fix bug in sparc block profiling.</li>
 	<li>Fix obscure code generation bug for the PARISC targets.</li>
