--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -1238,7 +1238,7 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>sparc-sun-solaris2.7</td>
-<td>UltraSparc Workstation</td>
+<td>UltraSPARC Workstation</td>
 <td>Successful (C, Obj-C; with tweak):
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00924.html">3.2</a>
 <br />Test results:
