* faq.html: Properly uppercase SPARC.

--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -112,7 +112,7 @@
       <dl> 
         <dd>
           Gcj and libgcj are known to work more or less with IA-32 and 
-          Sparc Solaris, Tru64 Unix, as well as IA-32, IA-64, Alpha, and PowerPC 
+          SPARC Solaris, Tru64 Unix, as well as IA-32, IA-64, Alpha, and PowerPC 
           Linux. They might work on other systems. Generally speaking, porting to a new 
           system should not be hard. This would be a good way to volunteer.
         </dd>
