--- a/htdocs/projects/web.html
+++ b/htdocs/projects/web.html
@@ -15,9 +15,19 @@ suggestions.  Suggestions accompanied by patches have a higher chance
 of being implemented soon. ;-)</p>
 
 <ul>
-<li>Move extra pages corresponding to technical news items into a
-    directory of their own. Add an index for these.</li>
-<li>Improve navigation, with a consistent (short) menu on every page.</li>
+  <li>Move extra pages corresponding to technical news items into a
+      directory of their own. Add an index for these.</li>
+
+  <li>Improve navigation, with a consistent (short) menu on every page.</li>
+
+  <li>Set up a system that automatically checks the mirrors list.
+
+  <p>It should detect mirrors that have gone away, are persistently
+  down, or are very out of date (the last being easy to do for those
+  carrying snapshots, harder for those with releases only).</p>
+
+  <p>DJ Delorie &lt;<a href="mailto:dj@redhat.com">dj@redhat.com</a>&gt;
+  has some scripts to do this already.</p></li>
 </ul>
 
 </body>
