Mention new CodeSourcery branches

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -383,6 +383,12 @@ be prefixed with the initials of the distributing organization.</p>
   <dt>csl-3_3_1-branch</dt>
   <dd>CodeSourcery release based on GCC 3.3.1.</dd>
 
+  <dt>csl-arm-2004-q3-branch</dt>
+  <dd>CodeSourcery ARM 2004-Q3 release</dd>
+
+  <dt>csl-3_4-linux-branch</dt>
+  <dd>CodeSourcery GNU/Linux compilers based on GCC 3.4.x.</dd>
+
 </dl>
 
 <h3><a name="olddevbranches">Inactive Development Branches</a></h3>
