Move SPARC entry to Caveats section.

--- a/htdocs/gcc-4.0/changes.html
+++ b/htdocs/gcc-4.0/changes.html
@@ -43,6 +43,7 @@
     <li>All MIPS targets now require the GNU assembler.  In particular,
         IRIX configurations can no longer use the MIPSpro assemblers,
         although they do still support the MIPSpro linkers.</li>
+    <li>The SPARC option <code>-mflat</code> has been removed.</li>
   </ul>
 
 <h2>General Optimizer Improvemente</h2>
@@ -273,7 +274,6 @@ register int bar;
 
 <h3>SPARC</h3>
   <ul>
-    <li>The option <code>-mflat</code> has been removed.</li>
     <li>The options <code>-mv8</code>, <code>-msparclite</code>,
         <code>-mcypress</code>, <code>-msupersparc</code>,
         <code>-mf930</code> and <code>-mf934</code> have been removed.
