Add PowerPC ABI changes in GCC 3.4.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -955,7 +955,16 @@ and not your code, that is broken.</em></p>
 	  aimed at reducing the reliance on assembler macros.</li>
     </ul>
 
-<h3>PowerPC Darwin</h3>
+<h3>PowerPC</h3>
+  <ul>
+    <li>GCC 3.4 releases have a number of fixes for PowerPC and PowerPC64
+    <a href="powerpc-abi.html">ABI incompatibilities</a>
+    regarding the way parameters are passed during functions calls.
+    These changes may result in incompatibility between code compiled
+    with GCC 3.3 and GCC 3.4.</li>
+  </ul>
+
+<h4>PowerPC Darwin</h4>
   <ul>
     <li>Support for shared/dylib gcc libraries has been added. It is
       enabled by default on <code>powerpc-apple-darwin7.0.0</code>
@@ -965,6 +974,25 @@ and not your code, that is broken.</em></p>
       powerpc-apple-darwin7.0.0</code> you need to install <a
       href="http://www.opendarwin.org/projects/dlcompat/">dlcompat</a>.
       </li>
+
+    <li>128-bit IBM extended precision format support added for
+    <code>long double</code>.</li>
+  </ul>
+
+<h4>PowerPC64 GNU/Linux</h4>
+  <ul>
+    <li> By default, PowerPC64 GNU/Linux now uses natural alignment of
+    structure elements.  The old four byte alignment for
+    <code>double</code>, with special rules for a <code>struct</code>
+    starting with a <code>double</code>, can be chosen with
+    <code>-malign-power</code>.  This change may result in
+    incompatibility between code compiled with GCC 3.3 and GCC 3.4.</li>
+
+    <li><code>-mabi=altivec</code> is now the default rather than
+    <code>-mabi=no-altivec</code>.</li>
+
+    <li>128-bit IBM extended precision format support added for
+    <code>long double</code>.</li>
   </ul>
 
 <h3>S/390 and zSeries</h3>
