* htdocs/contribute.html: Use the canonical PR ChangeLog 	format.

--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -204,7 +204,7 @@ the PR.  The <code>cvs commit</code> machinery understands how to
 extract this information and automatically append the commit log to
 the PR.  In order to be recognized, the text must fit a particular
 form.  It must start with "PR", and then must include the category
-and PR number.  For instance, <code>Fixes PR java/2369</code> is
+and PR number.  For instance, <code>PR java/2369</code> is
 valid.  Multiple PRs can be mentioned in a single message.
 </dd>
 
