BC branch merged to trunk

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -349,18 +349,6 @@ floating point</a> page on the <a
   <dd>This is a temporary branch for development of java GUI libraries
   (AWT and Swing) in the libjava directory.</dd>
 
-  <dt>gcj-abi-2-dev-branch</dt>
-  <dd>This is a branch for experimental work for the gcj Binary
-  Compatible ABI, aka gcj ABI 2.  As of the time of writing we don't
-  have a stable design for this new ABI, but we are doing some
-  experiments to see what works, and this branch is what we use.  Once
-  the design of the gcj ABI 2 is fleshed out and the code is stable
-  this branch will die.  Ask on the gcj list 
-  &lt;<a  href="mailto:java@gcc.gnu.org">java@gcc.gnu.org</a>&gt; before starting
-  any work on this branch.  This branch is
-  maintained by Andrew Haley.  Patches should be marked with the
-  tag <code>[BC ABI]</code> in the subject line.</dd>
-
   <dt>libstdcxx_so_7-branch</dt>
   <dd>This is a branch for experimental work on the C++ Runtime Library
   (libstdc++-v3) beyond the current version 6 library ABI. Paolo Carlini
@@ -402,6 +390,7 @@ be prefixed with the initials of the distributing organization.</p>
   gcc-3_4-basic-improvements-branch<br />
   mips-3_4-rewrite-branch<br />
   dfa-branch<br />
+  gcj-abi-2-dev-branch<br />
   <a href="projects/tree-ssa/">tree-ssa-20020619-branch</a></dt>
   <dd>These branches have been merged into the mainline.</dd>
 
