Document new 4.0 release mode status.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -64,8 +64,11 @@ mission statement</a>.</p>
   will become GCC 4.0.0 (<a href="gcc-4.0/changes.html">current changes</a>)
 </dt><dd>
   Branch status:
-  <a href="http://gcc.gnu.org/ml/gcc/2004-10/msg01005.html">2004-10-26</a>
+  <a href="http://gcc.gnu.org/ml/gcc/2004-11/msg00775.html">2004-11-22</a>
+  (release branch mode; fixes and regressions only).
+<!--
   (<a href="develop.html#stage3">Stage 3</a>; open for all maintainers).
+-->
 </dd>
 
 </dl>
