--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -121,6 +121,7 @@ particular releases or snapshots or the latest snapshot.  </p>
   <li>gcc_3_4_1_release</li>
   <li>gcc_3_4_0_release</li>
   <li>gcc-3_4-branch</li>
+  <li>gcc_3_3_5_release</li>
   <li>gcc_3_3_4_release</li>
   <li>gcc_3_3_3_release</li>
   <li>gcc_3_3_1_release</li>
