Replace branch listing for libada-branch with one for new libada-gnattools-branch.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -336,13 +336,14 @@ floating point</a> page on the <a
   describes this at more length.  This branch is being maintained by Zem
   Laski &lt;<a href="mailto:zlaski@apple.com">zlaski@apple.com</a>&gt;.</dd>
 
-  <dt>libada-branch</dt>
-  <dd>This branch exists to solve
+  <dt>libada-gnattools-branch</dt>
+  <dd>This is the spiritual successor to the libada branch.  This branch
+  exists to solve
   <a href="http://gcc.gnu.org/bugzilla/show_bug.cgi?id=5911">bug 5911</a>
-  and others, by breaking out the Ada runtime and utilities into a libada
-  directory.  Current work is devoted to cleaning up the configure and
-  make machinery used for libada, and separating it as much as possible
-  from the GCC build machinery.  Nathanael Nerode
+  and others, by breaking out the Ada runtime into a libada directory and
+  the Ada tools into a gnattools directory.  Current work is devoted to
+  cleaning up the configure and make machinery, and separating it as much
+  as possible from the GCC build machinery.  Nathanael Nerode
   &lt;<a href="mailto:neroden@gcc.gnu.org">neroden@gcc.gnu.org</a>&gt;
   is maintaining this branch.</dd>
 
