Add the cfo-branch project page

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -252,6 +252,13 @@ particular releases or snapshots or the latest snapshot.  </p>
   branch do not require approval, but they should be sent to gcc-patches
   list and the usual testing rules apply.</dd>
 
+  <dt><a href="projects/cfo.html">cfo-branch</a></dt>
+  <dd>The goal of this branch is to add a new extension for improving
+  the code size optimization of GCC with code factoring methods (code
+  motion and merging algorithms). Messages should be marked with 
+  <code>[cfo]</code> in the subject line. The usual contribution and 
+  testing rules apply.</dd>
+
 </dl>
 
 <h4>Architecture-specific</h4>
