--- a/htdocs/gcc-4.0/changes.html
+++ b/htdocs/gcc-4.0/changes.html
@@ -44,6 +44,19 @@
         IRIX configurations can no longer use the MIPSpro assemblers,
         although they do still support the MIPSpro linkers.</li>
     <li>The SPARC option <code>-mflat</code> has been removed.</li>
+    <li>English-language diagnostic messages will now use Unicode
+	quotation marks in UTF-8 locales.  (Non-English messages
+	already used the quotes appropriate for the language in
+	previous releases.)  If your terminal does not support UTF-8
+	but you are using a UTF-8 locale (such locales are the default
+	on many GNU/Linux systems) then you should set
+	<code>LC_CTYPE=C</code> in the environment to disable that
+	locale.  Programs that parse diagnostics and expect plain
+	ASCII English-language messages should set
+	<code>LC_ALL=C</code>.  See <a
+	href="http://www.cl.cam.ac.uk/~mgk25/ucs/quotes.html">Markus
+	Kuhn's explanation of Unicode quotation marks</a> for more
+	information.</li>
   </ul>
 
 <h2>General Optimizer Improvemente</h2>
