Mention improved VIS support.

--- a/htdocs/gcc-4.0/changes.html
+++ b/htdocs/gcc-4.0/changes.html
@@ -297,6 +297,9 @@ register int bar;
     <li>Code generation for function prologues and epilogues has been
         improved, resulting in better scheduling and allowing multiple
         exit points in functions.</li>
+    <li>Support for Sun's Visual Instruction Set (VIS) has been enhanced.
+	It is enabled by <code>-mvis</code> and provides new built-in functions
+	for VIS instructions on UltraSPARC processors.</li>
   </ul>
 
 <h3>NetWare</h3>
