Update for C99 TC2.

--- a/htdocs/c99status.html
+++ b/htdocs/c99status.html
@@ -9,7 +9,7 @@
 
 <p>This table is based on the list in the foreword to the printed
 standard ISO/IEC 9899:1999 (E), as amended by ISO/IEC
-9899:1999/Cor.1:2001 (E).</p>
+9899:1999/Cor.1:2001 (E) and ISO/IEC 9899:1999/Cor.2:2004 (E).</p>
 
 <p>Where "Library Issue" is listed in conjunction with some other
 status, this means that some compiler support is needed for the
@@ -343,11 +343,6 @@ implementation of VLAs has not been checked against C99 requirements.</li>
 
 <li><code>const</code>-qualified compound literals could share storage
 with each other and with string literals, but currently don't.</li>
-
-<li>The size of structures with flexible array members is <a
-href="http://gcc.gnu.org/ml/gcc/2002-05/msg02844.html">not as
-specified in C99</a>; this may be a defect in C99 and other
-implementations behave the same way as GCC.</li>
 
 <li>The information provided by <code>static</code> in parameter array
 declarators is not used for optimization.  It might make sense to use
