--- a/htdocs/java/gui-compare/libgcj-classpath-compare.html
+++ b/htdocs/java/gui-compare/libgcj-classpath-compare.html
@@ -4,7 +4,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-Wed Nov 17 14:06:56 UTC 2004</p>
+Wed Dec  1 15:26:55 UTC 2004</p>
 <p>Only lists gui files (AWT, Swing, and gtk-peer)</p>
 <p>This table intentionally omits certain classes which are not of
 interest.  If the second column shows a "Diff" link, then that means
@@ -15,19 +15,20 @@ differences are currently required.</p>
 
 <table width="100%" border="1" cellspacing="0" cellpadding="1">
 <tr><th align="left">Class</th> <th>Merge Status</th> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GdkGraphics</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GdkGraphics.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GdkGraphics2D</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GdkGraphics2D.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkComponentPeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkComponentPeer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkFramePeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkFramePeer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkImage</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkImage.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkImagePainter</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkImagePainter.diff">Diff</a></td> </tr>
 <tr> <td class="libgcj-only">gnu.java.awt.peer.gtk.Test</td> <td class="libgcj-only">GCJ-only</td> </tr>
 <tr> <td class="libgcj-only">gnu.java.awt.peer.gtk.TestAWT</td> <td class="libgcj-only">GCJ-only</td> </tr>
-<tr> <td class="needsmerge">java.awt.Button</td> <td class="needsmerge"><a href="compare/java.awt.Button.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.awt.Checkbox</td> <td class="needsmerge"><a href="compare/java.awt.Checkbox.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.awt.Choice</td> <td class="needsmerge"><a href="compare/java.awt.Choice.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.awt.Menu</td> <td class="needsmerge"><a href="compare/java.awt.Menu.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.awt.MenuItem</td> <td class="needsmerge"><a href="compare/java.awt.MenuItem.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.awt.Polygon</td> <td class="needsmerge"><a href="compare/java.awt.Polygon.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.awt.PopupMenu</td> <td class="needsmerge"><a href="compare/java.awt.PopupMenu.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.awt.TextComponent</td> <td class="needsmerge"><a href="compare/java.awt.TextComponent.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.Component</td> <td class="needsmerge"><a href="compare/java.awt.Component.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.Window</td> <td class="needsmerge"><a href="compare/java.awt.Window.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.image.MemoryImageSource</td> <td class="needsmerge"><a href="compare/java.awt.image.MemoryImageSource.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.PixelGrabber</td> <td class="needsmerge"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.awt.print.PrinterJob</td> <td class="needsmerge"><a href="compare/java.awt.print.PrinterJob.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphics.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GdkGraphics.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkImagePainter.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkImagePainter.c.diff">Diff</a></td> </tr>
 </table>
 </body>
 </html>
