--- a/htdocs/gcc-4.0/changes.html
+++ b/htdocs/gcc-4.0/changes.html
@@ -59,7 +59,7 @@
 	information.</li>
   </ul>
 
-<h2>General Optimizer Improvemente</h2>
+<h2>General Optimizer Improvements</h2>
 
   <ul>
     <li>
@@ -235,8 +235,8 @@ register int bar;
 	  <code>javax.imageio.spi</code>,
 	  <code>javax.print</code>,
 	  <code>javax.print.attribute</code>,
-	  <code>javax.print.attribute.standard</code>,
-	  <code>javax.print.event</code>,
+	  <code>javax.print.attribute.standard</code>, and
+	  <code>javax.print.event</code>
 	</li>
       </ul>
     </li>
