sigh, the inevitable xhtml fixes :-/

--- a/htdocs/projects/documentation.html
+++ b/htdocs/projects/documentation.html
@@ -64,7 +64,7 @@ about changes made in not so recent years to the <code>tree</code>
 interface.  Several people have written partial manuals on implementing
 new front ends.  Pointers to some of those can be found in our <a
 href="../readings.html">readings list</a>.  With the advent of tree-ssa,
-most of these manuals are obsolete.</p></li>
+most of these manuals are obsolete.</p>
 
 
 <h2><a name="internals_and_porting">Better documentation of how GCC
@@ -193,8 +193,8 @@ of the GCC manual.</a></h2>
 <p>All command line options should be indexed, and there should be index
 entries for the text of all error messages that might be confusing, if
 there is a relevant part of the manual.  See a <a
--href="http://gcc.gnu.org/ml/gcc-bugs/2001-02/msg00384.html">message to
--gcc-bugs</a> about this.</p>
+href="http://gcc.gnu.org/ml/gcc-bugs/2001-02/msg00384.html">message to
+gcc-bugs</a> about this.</p>
 
 
 <h2><a name="external_documents">Roll information in external documents
