--- a/htdocs/projects/index.html
+++ b/htdocs/projects/index.html
@@ -78,7 +78,7 @@ href="cpplib.html">C preprocessor</a>.</p>
 <p>There is a separate projects list for the <a href="web.html">web
 pages</a>.</p>
 
-<h2><a href="documentation_projects">Projects for improving the GCC documentation</a></h2>
+<h2><a name="documentation_projects">Projects for improving the GCC documentation</a></h2>
 <p>There is a separate projects list for <a
 href="documentation.html">projects for improving the GCC documentation</a>.</p>
 
