--- a/htdocs/gcc-4.0/criteria.html
+++ b/htdocs/gcc-4.0/criteria.html
@@ -141,7 +141,7 @@ inferior code on some test cases if it generates substantially
 superior code on other test cases.  Therefore, the Release Manager, or
 parties to whom he or she delegates responsibility, will make
 determinations on a case-by-case basis as to whether or not a code
-quality of compilation time regression is sufficiently severe as to
+quality or compilation time regression is sufficiently severe as to
 merit blocking the release.</p>
 
 </body>
