--- a/htdocs/gcc-4.0/criteria.html
+++ b/htdocs/gcc-4.0/criteria.html
@@ -53,7 +53,7 @@ systems, or are considered duplicative from a testing perspective.
 All platforms that are neither primary nor secondary are tertiary
 platforms.</p>
 
-<p>Our release criteria for primary platforms is:
+<p>Our release criteria for primary platforms is:</p>
 <ul>
 
 <li>
@@ -73,9 +73,8 @@ substantial mitigating factors.</p>
 the testsuite on the previous release of GCC, and no regressions are
 observed.</li>
 </ul>
-</p>
 
-<p>Our release criteria for the secondary platforms is:
+<p>Our release criteria for the secondary platforms is:</p>
 <ul>
 <li>The compiler bootstraps successfully, and the C++ runtime library
 builds.</li>
@@ -83,7 +82,6 @@ builds.</li>
 <li>The DejaGNU testsuite has been run, and a substantial majority of
 the tests pass.</li>
 </ul>
-</p>
 
 <p>There are no release criteria for tertiary platforms.</p>
 
@@ -98,7 +96,7 @@ application testing.</p>
 
 <h2>Primary Platform List</h2>
 
-<p>The primary platforms are:
+<p>The primary platforms are:</p>
 <ul>
 <li>hppa2.0w-hp-hpux11.11</li>
 <li>i686-pc-linux-gnu</li>
@@ -108,11 +106,10 @@ application testing.</p>
 <li>sparc-sun-solaris2.9</li>
 <li>x86_64-unknown-linux-gnu</li>
 </ul>
-</p>
 
 <h2>Secondary Platform List</h2>
 
-<p>The secondary platforms are:
+<p>The secondary platforms are:</p>
 <ul>
 <li>powerpc-apple-darwin</li>
 <li>powerpc-unknown-linux-gnu</li>
@@ -120,7 +117,6 @@ application testing.</p>
 <li>i686-pc-cygwin</li>
 <li>ia64-unknown-linux-gnu</li>
 </ul>
-</p>
 
 <h1>Code Quality and Compilation Time</h1>
 
