--- a/htdocs/gcc-3.4/buildstat.html
+++ b/htdocs/gcc-3.4/buildstat.html
@@ -84,6 +84,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>alphaev68-dec-osf5.1</td>
 <td>Tru64</td>
 <td>Bootstrap (C, C++, F77, Obj-C, Ada)
+<a href="http://gcc.gnu.org/ml/gcc/2004-11/msg00623.html">3.4.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2004-09/msg01065.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2004-07/msg00812.html">3.4.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2004-05/msg00136.html">3.4.0</a>
@@ -152,6 +153,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>i386-pc-solaris2.10</td>
 <td>&nbsp;</td>
 <td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-12/msg00593.html">3.4.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2004-07/msg00373.html">3.4.0</a>
 </td>
 </tr>
@@ -289,6 +291,14 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Debian 3.1, glibc 2.3.2, kernel 2.6.8</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-12/msg00111.html">3.4.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Fedora Core 2, glibc 2.3.3, kernel 2.6.6</td>
 <td>Bootstrap (C, C++, F77, Java, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2004-07/msg01201.html">3.4.1</a>
@@ -328,6 +338,14 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Mandrake 10.1, glibc 2.3.3, kernel 2.6.8</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-11/msg00800.html">3.4.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Red Hat 7.1, glibc 2.2.2, kernel 2.4.2</td>
 <td>Bootstrap:
 <a href="http://gcc.gnu.org/ml/gcc/2004-04/msg01315.html">3.4.0</a>
@@ -345,6 +363,14 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00535.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00069.html">3.4.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00960.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>SUSE 8.0 Professional, glibc 2.2.5, kernel 2.4.18</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-12/msg00516.html">3.4.3</a>
 </td>
 </tr>
 
